auth changes